# ai-agent

./: .dockerignore  .env  .env.example  .env.prd  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  TABBY_SETUP.md  benchmark.py  docker-compose.prd.yml  docker-compose.yml  download_model.py  env.example  main.py  repo_structure_ansi.txt  requirements.txt  security-report.html  test_phase1.py  test_phase2.py  test_phase3_4.py  test_tool_orch.py
.claude/: settings.local.json
agent/: README.md  __init__.py  analysis_prompt.py  events.py  graph.py  graph_adapter.py  memory.py  memory_store.py  metrics.py  models.py  orchestrator.py  plan.py  planner.py  prompt.py  repair.py  rules.py  rules_registry.py  state.py  state_machine.py  supervisor.py  tool_orchestrator.py  two_phase_strategy.py  validation.py  validation_rules.py  validation_schema.py
config/: README.md  agent.yaml  rag.yaml  vllm.yaml
context/: README.md  __init__.py  context_builder.py  snippet_selector.py  token_optimizer.py
deploy/: nginx.conf
docs/: CONTINUE_SETUP.md  PLAN.md  TWO_PHASE_STRATEGY.md  index.hmtl  index.html
gitlab-review-runner/: .gitlab-ci.example.yml  Dockerfile  README.md  ai_client.py  config.py  gitlab_client.py  main.py
indexer/: README.md  (+5 more)
mcp_server/: dep_classifier.py  hash_store.py  models.py  pyproject.toml  server.py  token_budget.py  tools.py  tools_indexer.py  tools_review.py  uploader.py
mcp_server/plugins/: __init__.py  base.py  csharp_plugin.py  fallback.py  go_plugin.py  hcl_plugin.py  java_plugin.py  python_plugin.py  registry.py  typescript_plugin.py
(+117 files in other folders)
