[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vtrip-mcp-server"
version = "0.1.2"
description = "MCP Server for VTrip AI Coding Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "tree-sitter>=0.23",
    "tree-sitter-java",
    "tree-sitter-go",
    "tree-sitter-python",
    "tree-sitter-c-sharp",
    "tree-sitter-javascript",
    "tree-sitter-hcl",
    "httpx>=0.27",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
vtrip-mcp-server = "mcp_server.server:main"

[tool.setuptools]
packages = ["mcp_server", "mcp_server.plugins"]

[tool.setuptools.package-dir]
mcp_server = "."
"mcp_server.plugins" = "plugins"
